# smart-irrigation-system

./: .env.example  .gitignore  AGENT.md  CLAUDE.md  Makefile  README.md  SYSTEM_REDESIGN_ARCHITECTURE_AND_USER_FLOWS.md  create_tables.py  db_create_all.py  docker-compose.yml  drop_all.py  flowchart TB.mmd  force_migrate.sh  run_all.sh  seed_data.py  seed_data2.py  setup_and_seed.sh  skaffold.yaml  start-all.ps1  start.bat  test_api.py  test_crop_health.py  test_mqtt_send.py
backend/: README.md  (+2 more)
services/gateway_service/: .env.example  Dockerfile  README.md  pyproject.toml
services/gateway_service/app/: main.py
services/gateway_service/tests/: test_config_bootstrap.py  test_gateway_contracts.py
services/iot_service/: .env  .env.example  .env.local  Dockerfile  README.md  pyproject.toml  requirements.txt  start.bat
services/iot_service/app/: __init__.py  main.py
services/iot_service/app/api/: health.py  iot.py
services/iot_service/app/core/: config.py  logging_config.py
services/iot_service/app/iot/: __init__.py  influx_repo.py  mqtt_client.py  pg_repo.py  schemas.py  service.py
services/iot_service/tests/: __init__.py  test_api.py  test_config.py  test_schemas.py  test_service.py
services/optimize_service/: .env.example  .gitignore  DATABASE_SETUP.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  README.md  alembic.ini  pyproject.toml  requirements.txt  setup.bat  setup_database.py
services/optimize_service/alembic/: env.py
services/optimize_service/alembic/versions/: 001_initial_migration.py  002_f4_runtime_contracts.py  (+2 more)
services/optimize_service/app/: main.py
services/optimize_service/notebooks/: ACA_O_SriLanka_PyTorch_MultiDataset.ipynb  Adaptive Crop & Area Optimization.ipynb  Adaptive Crop Optimization - Model Comparison.ipynb  Data Download & Extraction.ipynb  README.md
services/optimize_service/scripts/: bootstrap_crop_recommendation.py  bootstrap_price_model.py  bootstrap_seed_data.py  bootstrap_yield_model.py  ingest_hector_prices.py  run_monthly_backtest.py
services/optimize_service/src/: main.py
services/optimize_service/tests/: test_auth_contracts.py  test_authority_service.py  test_calendar_service.py  test_confidence_bands.py  test_cross_service_fusion.py  test_explanation_service.py  test_farmer_routes.py  test_feedback_routes.py  test_health.py  test_internal_field_sync_api.py  test_monitoring_service.py  test_operator_routes.py  test_optimizer_lp.py  test_oversupply_service.py  test_phase1_schema.py  test_planb_triggers.py  test_planning_integration.py  test_recommendations_api.py  test_yield_model_trained.py
(+644 files in other folders)
