[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-irrigation-gateway-service"
version = "1.0.0"
description = "FastAPI gateway service for smart-irrigation-system"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.109.0",
  "uvicorn>=0.27.0",
  "httpx>=0.26.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
